Fixing spacing for dwp-banner when on mobile

--- a/app/assets/stylesheets/local/dwp-tags.scss
+++ b/app/assets/stylesheets/local/dwp-tags.scss
@@ -5,7 +5,7 @@
   }
   border-bottom: 1px solid $govuk-border-colour;
   max-width: 960px;
-  margin: 0 15px;
+  margin: 0 15px 15px 0;
 
   @media (min-width: 640px) {
     margin: 0 30px;
